syntax = "proto3";

option go_package = "enginepb/";

service ChessEngine {
  rpc CalculateBestMove (MoveRequest) returns (MoveResponse);
}

message MoveRequest {
  string fen = 1;
  string type = 2;
}

message MoveResponse {
  string best_move = 1;
}
